--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ spotlessVersion = "7.0.2"
 ktorVersion = "3.2.0"
 ktorfit = "2.5.2"
 ktorfitKsp = "2.5.1"
+okioVersion = "3.13.0"
 
 #Room
 room = "2.7.2"
@@ -64,6 +65,9 @@ androidxComposeBom = "2025.06.01"
 androidxWork = "2.10.2"
 androidxComposeCompiler = "1.5.15"
 androidxComposeRuntimeTracing = "1.8.3"
+runner = "1.7.0"
+core = "1.7.0"
+
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -171,6 +175,8 @@ ktorfit-ksp = { group = "de.jensklingenberg.ktorfit", name = "ktorfit-ksp", vers
 ktorfit-converters-flow = { group = "de.jensklingenberg.ktorfit", name = "ktorfit-converters-flow", version.ref = "ktorfit" }
 ktorfit-lib = { group = "de.jensklingenberg.ktorfit", name = "ktorfit-lib", version.ref = "ktorfit" }
 
+squareup-okio = { group = "com.squareup.okio", name = "okio", version.ref = "okioVersion" }
+
 # Coil
 coil-core = { group = "io.coil-kt.coil3", name = "coil-core", version.ref = "coil" }
 coil-kt = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
@@ -200,6 +206,8 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
+androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -214,6 +222,7 @@ ktrofit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
 kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 androidKotlinMultiplatformLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 android-application-convention = { id = "org.convention.android.application", version = "unspecified" }
 android-application-compose-convention = { id = "org.convention.android.application.compose", version = "unspecified" }
@@ -225,3 +234,4 @@ cmp-application-convention = { id = "org.convention.cmp.application", version = 
 #Room Plugin
 room = { id = "androidx.room", version.ref = "room" }
 kmp-room-convention = { id = "org.convention.kmp.room", version = "unspecified" }
+android-lint = { id = "com.android.lint", version.ref = "agp" }
