ci: Add unit test infrastructure and GitHub Actions workflow
This commit introduces a comprehensive unit testing setup, including a GitHub Actions workflow for continuous integration, unit tests for the networking module, and helper scripts for local test execution.

- **CI/CD (`.github/workflows`):**
    - Adds a new `ci.yml` GitHub Actions workflow to run unit tests on every push and pull request to `main` and `develop`.
    - The workflow checks out code, sets up JDK 17, and runs Android (`testDebugUnitTest`) and iOS (`iosSimulatorArm64Test`) tests.
    - It uploads test results as artifacts and generates a test summary.

- **`core/networking` Module:**
    - Adds unit tests for `HttpClientProvider`, `JsonProvider`, `KtorfitProvider`, and `NetworkConfig` to validate their behavior.
    - Adds `kotlin.test`, `kotlinx.coroutines.test`, and `ktor.client.mock` as test dependencies.
    - Removes the boilerplate `ExampleApiService` and related DTOs (`UserResponse`, etc.), as well as its registration in the `NetworkModule`.
    - Temporarily comments out `TokenStorage` dependencies in `HttpClientProvider` and `NetworkModule`.

- **Gradle & Build System:**
    - Adds the `ktor-client-mock` dependency to `libs.versions.toml`.
    - Creates a `run-unit-tests.sh` script to simplify running Android and iOS tests locally for all or specific modules.
    - Registers root-level Gradle tasks (`testAllAndroid`, `testAllIos`, `testAll`) to run tests across the entire project.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -170,6 +170,7 @@ ktor-client-websockets = { group = "io.ktor", name = "ktor-client-websockets", v
 ktor-client-winhttp = { group = "io.ktor", name = "ktor-client-winhttp", version.ref = "ktorVersion" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
 ktor-server-auth = { group = "io.ktor", name = "ktor-server-auth", version.ref = "ktorVersion" }
+ktor-client-mock = {group = "io.ktor" , name = "ktor-client-mock", version.ref = "ktorVersion"}
 
 ktorfit-ksp = { group = "de.jensklingenberg.ktorfit", name = "ktorfit-ksp", version.ref = "ktorfitKsp" }
 ktorfit-converters-flow = { group = "de.jensklingenberg.ktorfit", name = "ktorfit-converters-flow", version.ref = "ktorfit" }
