feat: Implement splash screen and cleanup design system
This commit introduces a new splash screen and refactors the design system by removing unused adaptive layout components and adding new UI elements.

- **`feature/home` Module (New):**
    - Adds a new `home` feature module.
    - Implements a `SplashScreen` with a logo, app name, and a smooth progress indicator.
    - Includes `ic_logo_splash.xml` and `img_background_splash.xml` drawables.

- **`core/ui` Module (New):**
    - Creates a new `core/ui` module to hold shared UI resources.
    - Adds an `app_name` string resource.
    - Includes `ic_logo_splash.xml` and `img_background_splash.xml` as drawable resources.

- **`core/designsystem` Module:**
    - **Removals:**
        - Deletes `AdaptiveListDetailPaneScaffold`, `AdaptiveNavigableListDetailScaffold`, and `AdaptiveNavigableSupportingPaneScaffold` as they are no longer used.
    - **Additions:**
        - Adds `KptSmoothLinearProgressIndicator`, a customizable progress bar with rounded corners.
        - Introduces `KptCornerRadius` to the theme for standardized corner radii.
        - Adds basic compile-time tests for `KptFlowColumn`, `KptFlowRow`, and `KptGrid` to ensure they compose correctly.
    - **Theme Updates:**
        - Adjusts the primary color to blue (`#3171F3`).
        - Updates headline font weights to `Bold`.
        - Changes background, surface, and on-background colors.
        - Updates the resource class package name from `...generated.resources` to `...resources`.

- **Gradle & Build System:**
    - Adds the new `:feature:home` and `:core:ui` modules to `settings.gradle.kts`.
    - Updates `libs.versions.toml` with the `calf-permissions` dependency.
    - Configures dependencies for the new modules.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -69,6 +69,7 @@ runner = "1.7.0"
 core = "1.7.0"
 
 androidxTracing = "1.3.0"
+calfPermissions = "0.8.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -81,7 +82,7 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-tracing-ktx = { group = "androidx.tracing", name = "tracing-ktx", version.ref = "androidxTracing" }
 
-
+calf-permissions = { module = "com.mohamedrejeb.calf:calf-permissions", version.ref = "calfPermissions" }
 
 # jb Compose
 jb-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
