feat: Implement native camera and display captured image
This commit integrates a native camera implementation for iOS and prepares the Android side. It allows capturing a photo, which is then passed back to the `MainScreen` and displayed.

- **iOS Camera Implementation:**
    - Adds a native Swift UI camera view (`CameraView.swift`, `CameraModel.swift`) using `AVFoundation`.
    - The new camera UI includes controls for capturing, re-taking, and selecting from the photo library.
    - Implements `IOSNativeViewFactory` to create the camera `UIViewController` and handle the callback with the captured image data (`KotlinByteArray`).
    - Uses `UIKitViewController` in `NativeCameraView.ios.kt` to embed the Swift UI view.

- **`composeApp` & `feature/home`:**
    - The `CameraScreen` is refactored to use the `expect fun NativeCameraView`.
    - In `App.kt`, state is managed to hold the `capturedImage` as an `ImageBitmap`.
    - When a photo is captured, it's converted to an `ImageBitmap` and passed to `MainScreen`.
    - `MainScreen` now includes a `CapturedImageSection` to display the photo if it exists.

- **`core/platform` & `core/ui`:**
    - `NativeCameraView` `expect` function is updated to include a `modifier`.
    - The `NativeViewFactory` interface on iOS is updated to pass callbacks for image capture and back navigation.
    - Adds an extension function `toImageBitmap()` in the `core/ui` module (not shown in diff but implied by usage) to convert a `ByteArray` to an `ImageBitmap`.

- **Gradle & Build System:**
    - Adds the `skiko` dependency to `libs.versions.toml` and applies it to the `core/ui` module for image processing.
    - Removes unused framework configuration from `build-logic/convention/src/main/kotlin/org/convention/KotlinMultiplatform.kt`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,7 @@ kotlinxDatetime = "0.6.2"
 kotlinxImmutable = "0.3.8"
 kotlinxSerializationJson = "1.8.1"
 ksp = "2.1.20-2.0.1"
+skiko = "0.9.30"
 
 # Static Analysis & Code Formatting
 ktlint = "12.1.1"
@@ -221,6 +222,9 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
 androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+
+# Skia/Skiko
+jetbrains-skia = { module = "org.jetbrains.skiko:skiko", version.ref = "skiko" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
