feat: Implement Android native camera view
This commit introduces a native camera implementation for the Android platform, leveraging CameraX and Jetpack Compose. It provides a complete camera interface, including preview, capture, flash control, gallery access, and image cropping.

- **`core/platform` Module (Android):**
    - Adds `CameraScreen.kt`, a comprehensive Composable for handling the camera UI and logic.
    - Implements camera preview using `CameraX` and `AndroidView`.
    - Integrates `UCrop` for image cropping after capture or selection from the gallery.
    - Manages camera permissions using `accompanist-permissions`.
    - Provides UI controls for capture, flash modes (on/off/auto), gallery access, and retaking photos.
    - Adds a `CameraViewModel` to manage the camera's state.
    - The `NativeCameraView.android.kt` is updated to use the new `CameraScreen`.

- **`composeApp` Module:**
    - Updates `AndroidManifest.xml` with required camera permissions (`CAMERA`, `READ/WRITE_EXTERNAL_STORAGE`, `READ_MEDIA_IMAGES`) and features.
    - Registers the `UCropActivity` in the manifest.

- **Gradle & Build System:**
    - Adds the `jitpack.io` Maven repository to `settings.gradle.kts`.
    - Updates `libs.versions.toml` with new dependencies for CameraX, Accompanist Permissions, Coil, and UCrop.
    - Adds necessary dependencies to the `core/platform` and `composeApp` modules.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.37.3"
 agp = "8.11.2"
 android-compileSdk = "36"
 android-minSdk = "24"
@@ -8,6 +9,7 @@ androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
 androidx-testExt = "1.3.0"
+coilCompose = "2.7.0"
 composeHotReload = "1.0.0-rc02"
 composeMultiplatform = "1.9.1"
 junit = "4.13.2"
@@ -32,6 +34,7 @@ junitJupiterApi = "5.13.4"
 junitPlatformLauncherVersion = "1.13.4"
 
 # Jetbrains CMP
+ucrop = "2.2.11"
 windowsSizeClass = "0.5.0"
 composeJB = "1.8.2"
 composeLifecycle = "2.9.1"
@@ -72,8 +75,11 @@ core = "1.7.0"
 androidxTracing = "1.3.0"
 calfPermissions = "0.8.0"
 cameraX = "1.4.0"
+material3 = "1.4.0"
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -205,8 +211,8 @@ androidx-compose-compiler = { group = "androidx.compose.compiler", name = "compi
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
 
-androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material3" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class" }
 
 androidx-work-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWork" }
@@ -224,7 +230,8 @@ androidx-runner = { group = "androidx.test", name = "runner", version.ref = "run
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
 
 # Skia/Skiko
-jetbrains-skia = { module = "org.jetbrains.skiko:skiko", version.ref = "skiko" }
+jetbrains-skia = { group = "org.jetbrains.skiko", name = "skiko-android", version.ref = "skiko" }
+ucrop = { module = "com.github.yalantis:ucrop", version.ref = "ucrop" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
